--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@blockvision/bbscan-ts-sdk",
-  "version": "0.0.1",
+  "name": "bbscan-ts-sdk",
+  "version": "0.0.2",
   "main": "index.js",
   "exports": {
     "types": "./dist/index.d.ts",
