--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2"
-  }
+  },
+  "keywords": [
+    "bouncebit",
+    "bbscan",
+    "eth",
+    "stake",
+    "ts-sdk"
+  ]
 }
